--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p class="paragraph">We provide a full range of translation<br> and interpreting services.</p>
                     </div>
                 </div>
-                <div class="section_top-right modal">
+                <div class="section_top-right modal contracted">
                     <h3 class="modal_title">Translate Calculation</h3>
                     <div class="modal_steps">
                         <p class="modal_line"></p>
@@ -73,14 +73,14 @@
                         <span class="modal_steps-span steps-disable" >Text and timing</span>
                         <span class="modal_steps-span steps-disable">Contact details</span>
                     </div>
-                    <div class="form-section1 section-hide">
+                    <div class="form-section1 section-show">
                         <div class="form">
                             <div class="form_down">
                                 <select class="form_translate" name="user_profile_color_2" required="required">
                                     <option value="">Translation from</option>
                                     <option value="1">Romanian</option>
                                     <option value="2">English</option>
-                                    <option value="3">Deutsch</option>
+                                    <option value="3">German</option>
                                     <option value="4">French</option>
                                     <option value="5">Italian</option>
                                 </select>
@@ -93,7 +93,7 @@
                                     <option value="">Translation to</option>
                                     <option value="1">Romanian</option>
                                     <option value="2">English</option>
-                                    <option value="3">Deutsch</option>
+                                    <option value="3">German</option>
                                     <option value="4">French</option>
                                     <option value="5">Italian</option>
                                 </select>
@@ -106,19 +106,19 @@
                     <div class="form-section2 section-hide">
                         <div class="form-section2_input">
                             <input class="form-section2_input-text"name="myFile" type="file">
-                            <input class="form-section2_input-bottom" name="textfield" type="text" value="Enter the task in the text field">
+                            <input class="form-section2_input-bottom" name="textfield" type="text" placeholder="Enter the task in the text field">
                         </div>
                         <div class="form-section2_buttons">
                             <button class="form-section_back">Back</button>
                             <button class="form-section_next">Next</button>
                         </div>
                     </div>
-                    <div class="form-section3 section-show">
+                    <div class="form-section3 section-hide">
                         <div class="form-section3_input">
-                            <p class ="form-section3_p"><input class="form-section3_input1" name="textfield" type="text" value="Full name"></p>
+                            <p class ="form-section3_p"><input class="form-section3_input1" name="textfield" type="text" placeholder="Full name"></p>
                             <div class="form-section3_span">
-                                <span><input class="form-section3_input2" name="textfield" type="text" value="Telephone"></span>
-                                <span><input class="form-section3_input2" name="textfield" type="text" value="E-mail"></span>
+                                <span><input class="form-section3_input2" name="textfield" type="text" placeholder="Telephone"></span>
+                                <span><input class="form-section3_input2" name="textfield" type="text" placeholder="E-mail"></span>
                             </div>
                             <div class="form-section2_buttons">
                                 <button class="form-section_back">Back</button>
