--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             <input class="form-section2_input-bottom" name="textfield" type="text" placeholder="Enter the task in the text field">
                         </div>
                         <div class="form-section2_buttons">
-                            <button class="form-section_back">Back</button>
-                            <button class="form-section_next">Next</button>
+                            <button class="form-section2_back">Back</button>
+                            <button class="form-section2_next">Next</button>
                         </div>
                     </div>
                     <div class="form-section3 section-hide">
@@ -121,8 +121,8 @@
                                 <span><input class="form-section3_input2" name="textfield" type="text" placeholder="E-mail"></span>
                             </div>
                             <div class="form-section2_buttons">
-                                <button class="form-section_back">Back</button>
-                                <button class="form-section_next">Next</button>
+                                <button class="form-section3_back">Back</button>
+                                <button class="form-section3_next">Done</button>
                             </div>
                         </div>
                     </div>
