--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
                 <div class="section_top-right modal contracted">
                     <h3 class="modal_title">Translate Calculation</h3>
                     <div class="modal_steps">
-                        <p class="modal_line"></p>
+                        <div class="modal_line">
+                            <p class="modal_line1 line-disable"></p>
+                            <p class="modal_line2 line-disable"></p>
+                        </div>
                         <div class="modal_operations">
-                            <div class="modal_number number-active"><span>1</span></div>
-                            <div class="modal_number number-disable"><span>2</span></div>
-                            <div class="modal_number number-disable"><span>3</span></div>
+                            <div class="number1 modal_number number-active"><span>1</span></div>
+                            <div class="number2 modal_number number-disable"><span>2</span></div>
+                            <div class="number3 modal_number number-disable"><span>3</span></div>
                         </div>
                     </div>
                     <div class="modal_steps-description">
-                        <span class="modal_steps-span steps-active">Translation direction</span>
-                        <span class="modal_steps-span steps-disable" >Text and timing</span>
-                        <span class="modal_steps-span steps-disable">Contact details</span>
+                        <span class="step1 modal_steps-span steps-active">Translation direction</span>
+                        <span class="step2 modal_steps-span steps-disable" >Text and timing</span>
+                        <span class="step3 modal_steps-span steps-disable">Contact details</span>
                     </div>
                     <div class="form-section1 section-show">
                         <div class="form">
