--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <div class="header_contact-bottom">Mon-Friday:9:00-19:00  Sat-Sunday:10:00-18:00</div>
                 </div>
             </div>
+            <div class="border-top"></div>
             <ul class="container menu">
                 <li><a href="#" class="menu_link">Services</a></li>
                 <li><a href="#" class="menu_link">Prices</a></li>
@@ -43,7 +44,7 @@
                 <li><a href="#" class="menu_link">Reviews</a></li>
                 <li><a href="#" class="menu_link">Question and answers</a></li>
                 <li><a href="#" class="menu_link">Contact</a></li>
-                <li><a href="#" class="menu_link">Request call</a></li>
+                <button class="request-call">Request call</button>
             </ul>
         </div>
     </div>
