--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
                     </div>
                     <div class="form-section2 section-hide">
                         <div class="form-section2_input">
-                            <input class="form-section2_input-text"name="myFile" type="file">
+                            <div class="form-section2_label">
+                            <label class="form-section2_label1" for="select-file"><img  class="form-section2_img" src="./img/unpload.svg" alt="Select file"><span id="display-image" class="form-section2_label-span">Upload<br> file</span></label>
+                            <input id="select-file" class="form-section2_input-text"name="myFile" type="file">
+                            </div>
                             <input class="form-section2_input-bottom" name="textfield" type="text" placeholder="Enter the task in the text field">
                         </div>
                         <div class="form-section2_buttons">
