--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="form-section2_input">
                             <div class="form-section2_label">
                             <label class="form-section2_label1" for="select-file"><img  class="form-section2_img" src="./img/unpload.svg" alt="Select file"><span id="display-image" class="form-section2_label-span">Upload<br> file</span></label>
-                            <input id="select-file" class="form-section2_input-text"name="myFile" type="file">
+                            <input id="select-file" class="form-section2_input-text"name="myFile" type="file" onchange = "testFunction()">
                             </div>
                             <input class="form-section2_input-bottom" name="textfield" type="text" placeholder="Enter the task in the text field">
                         </div>
