--- a/index.html
+++ b/index.html
@@ -167,6 +167,75 @@
             <div class="section_menu3">Express delivery</div>
         </div>
     </div>
+    <div class="services">
+        <div class="services_top-section">
+            <div class="services_personal-documents">
+                <img src="./img/wallpaper-image1.png" alt="personal-documents">
+                <h4 class="services_titleH4">Personal documents</h4>
+                <ul class="services_ul">
+                    <li>the passport</li>
+                    <li>water certificates</li>
+                    <li>certificate</li>
+                    <li>references</li>
+                    <li>the rights</li>
+                    <li>evidence</li>
+                    <li>identity card</li>
+                    <li>documents for the embassy</li>
+                </ul>
+                <p class="services_leave-request">Leave a request →</p>
+            </div>
+            <div class="services_legal-translation">
+                <img src="./img/wallpaper-image2.png" alt="legal-translation">
+                <h4 class="services_titleH4">Legal translation</h4>
+                <ul class="services_ul">
+                    <li>agreements</li>
+                    <li>contracts</li>
+                    <li>agreements</li>
+                    <li>licenses</li>
+                    <li>powers of attorney</li>
+                    <li>protocols</li>
+                    <li>founding documents</li>
+                    <li>tender documentation</li>
+                </ul>
+                <p class="services_leave-request">Leave a request →</p>
+            </div>
+            <div class="services_technical-translation">
+                <img src="./img/wallpaper-image3.png" alt="technical-translation">
+                <h4 class="services_titleH4">Technical translation</h4>
+                <ul class="services_ul">
+                    <li>instructions</li>
+                    <li>guides</li>
+                    <li>GOSTS</li>
+                    <li>SNIPS</li>
+                    <li>specifications</li>
+                    <li>blueprints</li>
+                    <li>scheme</li>
+                    <li>technical documentation</li>
+                </ul>
+                <p class="services_leave-request">Leave a request →</p>
+            </div>
+            <div class="services_medical-translation">
+                <img src="./img/wallpaper-image4.png" alt="medical-translation">
+                <h4 class="services_titleH4">Medical Translation </h4>
+                <ul class="services_ul">
+                    <li>the passport</li>
+                    <li>water certificates</li>
+                    <li>certificate</li>
+                    <li>references</li>
+                    <li>the rights</li>
+                    <li>evidence</li>
+                    <li>identity card</li>
+                    <li>documents for the embassy</li>
+                </ul>
+                <p class="services_leave-request">Leave a request →</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Personal documents
+    Legal translation
+    Technical translation
+    Medical Translation -->
 
 </body>
 <script src="js/JavaScript.js"></script>
