--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
             <div class="section_menu3">Express delivery</div>
         </div>
     </div>
+<!-- Menu Card Services ====================================================================================== -->
     <div class="services">
-        <div class="services_top-section">
-            <div class="services_personal-documents">
+        <h2 class="services_our-services container">Our Services</h2>
+        <div class="services_top-section container">
+            <div class="services_personal-documents shadow">
                 <img src="./img/wallpaper-image1.png" alt="personal-documents">
                 <h4 class="services_titleH4">Personal documents</h4>
                 <ul class="services_ul">
@@ -184,7 +186,7 @@
                 </ul>
                 <p class="services_leave-request">Leave a request →</p>
             </div>
-            <div class="services_legal-translation">
+            <div class="services_legal-translation shadow">
                 <img src="./img/wallpaper-image2.png" alt="legal-translation">
                 <h4 class="services_titleH4">Legal translation</h4>
                 <ul class="services_ul">
@@ -199,7 +201,7 @@
                 </ul>
                 <p class="services_leave-request">Leave a request →</p>
             </div>
-            <div class="services_technical-translation">
+            <div class="services_technical-translation shadow">
                 <img src="./img/wallpaper-image3.png" alt="technical-translation">
                 <h4 class="services_titleH4">Technical translation</h4>
                 <ul class="services_ul">
@@ -214,7 +216,7 @@
                 </ul>
                 <p class="services_leave-request">Leave a request →</p>
             </div>
-            <div class="services_medical-translation">
+            <div class="services_medical-translation shadow">
                 <img src="./img/wallpaper-image4.png" alt="medical-translation">
                 <h4 class="services_titleH4">Medical Translation </h4>
                 <ul class="services_ul">
