--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <li>identity card</li>
                     <li>documents for the embassy</li>
                 </ul>
-                <p class="services_leave-request">Leave a request →</p>
+                <div class="services_request-container"><a href="#"class="services_leave-request">Leave a request →</a></div>
             </div>
             <div class="services_legal-translation shadow">
                 <img src="./img/wallpaper-image2.png" alt="legal-translation">
@@ -199,7 +199,7 @@
                     <li>founding documents</li>
                     <li>tender documentation</li>
                 </ul>
-                <p class="services_leave-request">Leave a request →</p>
+                <div class="services_request-container"><a href="#"class="services_leave-request">Leave a request →</a></div>
             </div>
             <div class="services_technical-translation shadow">
                 <img src="./img/wallpaper-image3.png" alt="technical-translation">
@@ -214,7 +214,7 @@
                     <li>scheme</li>
                     <li>technical documentation</li>
                 </ul>
-                <p class="services_leave-request">Leave a request →</p>
+                <div class="services_request-container"><a href="#"class="services_leave-request">Leave a request →</a></div>
             </div>
             <div class="services_medical-translation shadow">
                 <img src="./img/wallpaper-image4.png" alt="medical-translation">
@@ -229,16 +229,13 @@
                     <li>identity card</li>
                     <li>documents for the embassy</li>
                 </ul>
-                <p class="services_leave-request">Leave a request →</p>
+                <div class="services_request-container"><a href="#"class="services_leave-request">Leave a request →</a></div>
             </div>
         </div>
     </div>
+    <div class="container services_top-section selectorClass ">
 
-    <!-- Personal documents
-    Legal translation
-    Technical translation
-    Medical Translation -->
-
+    </div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
