--- a/index.html
+++ b/index.html
@@ -234,7 +234,21 @@
         </div>
     </div>
     <div class="container services_top-section selectorClass ">
-
+    </div>
+    <div class="aditional-services container">
+        <div class="aditional-services_section">
+            <h2 class="aditional-services_title">Additional services</h2>
+            <div class="aditional-services_section-bottom">
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Aditional services</span></div>
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Translation of declarations</span></div>
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Audio and video translation"><span>Audio and video translation</span></div>
+            </div>
+            <div class="aditional-services_section-bottom">
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Aditional services</span></div>
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Translation of declarations</span></div>
+                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Audio and video translation"><span>Audio and video translation</span></div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="js/JavaScript.js"></script>
