--- a/index.html
+++ b/index.html
@@ -250,6 +250,27 @@
             </div>
         </div>
     </div>
+    <div class="our-company">
+        <div class="our-company_section container">
+            <div class="our-company_left">
+                <h2>Our company</h2>
+                <p>We are a team of professionals.</p>
+                <p>
+                    Our customers know and recommend us as a company<br> providing a full range of translation 
+                    services with consistently high quality.<br> The company has significant experience 
+                    in the field of translation business, a qualified team,<br> well-established 
+                    programs of interaction with customers.
+                </p>
+                <p>Our team consists of only experienced translators who guarantee
+                    a high quality of service, providing full language 
+                    support to the client, regardless of the complexity and
+                    volume of the required services.
+                </p>
+                <div class="our-company_experience"></div>
+            </div>
+            <div class="our-company_right"></div>
+        </div>
+    </div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
