--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
                     <p>We are a team of professionals.</p>
                     <p>
                         Our customers know and recommend us as a company<br> providing a full range of translation 
-                        services with consistently high quality.<br> The company has significant experience 
-                        in the field of translation business, a qualified team,<br> well-established 
+                        services with consistently <br> high quality.The company has significant experience 
+                        in the field <br>of translation business, a qualified team, well-established <br>
                         programs of interaction with customers.
                     </p>
-                    <p>Our team consists of only experienced translators who guarantee
-                        a high quality of service, providing full language 
-                        support to the client, regardless of the complexity and
+                    <p>Our team consists of only experienced translators who<br> guarantee
+                        a high quality of service, providing full language <br>
+                        support to the client, regardless of the complexity<br> and
                         volume of the required services.
                     </p>
                     <div class="our-company_experience"></div>
