--- a/index.html
+++ b/index.html
@@ -276,6 +276,128 @@
             </div>
         </div>
     </div>
+    <div class="advantage-section">
+        <h2>15 reasons to choose us!</h2>
+        <div class="advantage-section_section-total container">
+        
+        <div class="advantage-section_container">
+            <div class="advantage-section_section">
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon1.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour.</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon2.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon3.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon4.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon5.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+            </div>
+<!-- Section1 ==================================================================================================================================== -->
+            <div class="advantage-section_section">
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon1.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour.</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon2.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon3.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon4.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon5.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+            </div>
+<!-- Section2 ==================================================================================================================================== -->
+            <div class="advantage-section_section">
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon1.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour.</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon2.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon3.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon4.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+                <div class="advantage-section_image">
+                    <img src="./img/advantage-icon5.svg" alt="advantage-icon1">
+                    <div class="advantage-section_description">
+                        <h4>Urgent translation</h4>
+                        <p>We have the ability to translate <br>up to 100 pages per day. <br>The standard term is 1 page in 1 hour</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+<!-- Section3 ==================================================================================================================================== -->
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
