--- a/index.html
+++ b/index.html
@@ -238,15 +238,19 @@
     <div class="aditional-services container">
         <div class="aditional-services_section">
             <h2 class="aditional-services_title">Additional services</h2>
-            <div class="aditional-services_section-bottom">
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Aditional services</span></div>
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Translation of declarations</span></div>
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Audio and video translation"><span>Audio and video translation</span></div>
-            </div>
-            <div class="aditional-services_section-bottom">
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Aditional services</span></div>
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Translation of declarations</span></div>
-                <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Audio and video translation"><span>Audio and video translation</span></div>
+            <div class="aditional-services_section-flex">
+                <div class="aditional-services_section-bottom">
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>File layout</span></div>
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Website translation</span></div>
+                </div>
+                <div class="aditional-services_section-bottom">
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Translation of declarations</span></div>
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Consular legalization</span></div>
+                </div>
+                <div class="aditional-services_section-bottom">
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Aditional services"><span>Audio and video translation</span></div>
+                    <div class="aditional-services_subsection"><img src="./img/aditional-services_svg.svg" alt="Translation of declarations"><span>Certification with a bureau seal</span></div>
+                </div>
             </div>
         </div>
     </div>
@@ -398,6 +402,29 @@
         </div>
     </div>
 <!-- Section3 ==================================================================================================================================== -->
+    <div class="order-translation">
+        <div class="order-translation_section">
+            <h2 class="order-translation_title">How to order a translation?</h2>
+            <div class="order-translation_steps">
+                <div class="order-translation_numbers">
+                    <div class="order-translation_border"><span>1</span></div>
+                    <span class="order-translation_span"></span>
+                    <div class="order-translation_border"><span>2</span></div>
+                    <span class="order-translation_span"></span>
+                    <div class="order-translation_border"><span>3</span></div>
+                    <span class="order-translation_span"></span>
+                    <div class="order-translation_border"><span>4</span></div>
+                </div>
+                <div class="order-translation_description">
+                    <span>Submit an application</span>
+                    <span>Wait for a response from <br> the manager regarding the cost,<br> terms and payment method</span>
+                    <span>Send confirmation and make an advance payment</span>
+                    <span>Get your translation ready</span>
+                </div>
+            </div>
+            <button class="order-translation_button">Send request</button>
+        </div>
+    </div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
