--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             </div>
         </div>
     </div>
+<!-- Advantage Section ==================================================================================================================================== -->
     <div class="advantage-section">
         <h2>15 reasons to choose us!</h2>
         <div class="advantage-section_section-total container">
@@ -407,22 +408,36 @@
             <h2 class="order-translation_title">How to order a translation?</h2>
             <div class="order-translation_steps">
                 <div class="order-translation_numbers">
-                    <div class="order-translation_border"><span>1</span></div>
+                    <div class="order-translation_border-content">
+                        <div class="order-translation_border"><div class="order-translation_border1 border1-active"></div></div>
+                        <span class="order-translation_step-number  order-translation-number-active">1</span>
+                    </div>
                     <span class="order-translation_span"></span>
-                    <div class="order-translation_border"><span>2</span></div>
+                    <div class="order-translation_border-content">
+                        <div class="order-translation_border"><div class="order-translation_border1"></div></div>
+                        <span class="order-translation_step-number">2</span>
+                    </div>
                     <span class="order-translation_span"></span>
-                    <div class="order-translation_border"><span>3</span></div>
+                    <div class="order-translation_border-content">
+                        <div class="order-translation_border"><div class="order-translation_border1 "></div></div>
+                        <span class="order-translation_step-number">3</span>
+                    </div>
                     <span class="order-translation_span"></span>
-                    <div class="order-translation_border"><span>4</span></div>
+                    <div class="order-translation_border-content">
+                        <div class="order-translation_border"><div class="order-translation_border1 "></div></div>
+                        <span class="order-translation_step-number">4</span>
+                    </div>
                 </div>
                 <div class="order-translation_description">
                     <span>Submit an application</span>
-                    <span>Wait for a response from <br> the manager regarding the cost,<br> terms and payment method</span>
-                    <span>Send confirmation and make an advance payment</span>
-                    <span>Get your translation ready</span>
+                    <span>Wait for a response <br> from  the manager<br> regarding the cost,<br> terms and payment <br>method</span>
+                    <span>Send confirmation <br>and make an <br>advance payment</span>
+                    <span class="order-translation_description1">Get your <br>translation ready</span>
                 </div>
             </div>
-            <button class="order-translation_button">Send request</button>
+            <div class="order-translation_button-section">
+                <button class="order-translation_button">Send request</button>
+            </div>
         </div>
     </div>
 </body>
