--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                 </div>
             </div>
 <!-- Section1 ==================================================================================================================================== -->
+<!-- Section2 ==================================================================================================================================== -->
             <div class="advantage-section_section">
                 <div class="advantage-section_image">
                     <img src="./img/advantage-icon6.svg" alt="advantage-icon1">
@@ -362,6 +363,7 @@
                 </div>
             </div>
 <!-- Section2 ==================================================================================================================================== -->
+<!-- Section3 ==================================================================================================================================== -->
             <div class="advantage-section_section">
                 <div class="advantage-section_image">
                     <img src="./img/advantage-icon7.svg" alt="advantage-icon1">
@@ -440,6 +442,27 @@
             </div>
         </div>
     </div>
+<!-- Order Translation ==================================================================================================================================== -->
+<!-- Slider ==================================================================================================================================== -->
+<div class="slider container">
+    <div class="slider_title">
+        <h2>Recommendation letters</h2>
+    </div>
+    <div class="slider_section">
+        <div class="slider_buttons">
+            <button class="slider_button1"><img src="/img/slider-button-left.svg" alt="button-left"></button>
+            <button class="slider_button2"><img src="/img/slider-button-right.svg" alt="button-left"></button>
+        </div>
+        <div class="slider_image">
+            <img src="/img/recomendation1.png" alt="recomendation1">
+            <img src="/img/recomendation2.png" alt="recomendation2">
+            <img src="/img/recomendation3.png" alt="recomendation3">
+            <!-- <img src="/img/recomendation1.png" alt="recomendation1">
+            <img src="/img/recomendation2.png" alt="recomendation2">
+            <img src="/img/recomendation3.png" alt="recomendation3"> -->
+        </div>
+    </div>
+</div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
